# pyage

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Pipfile  README.md  SECURITY.md  age  mypy.ini  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  versioneer.py  workspace.code-workspace
.github/workflows/: buildandtest.yml  comparegoage.yml  compatibility.yml  publish-testpypi.yml  publish.yml  pythonapp.yml
age/: __init__.py  file.py  file_test.py  header.py  keyloader.py  openssh_keys.py  openssh_keys_test.py  parser.py  parser_test.py  stream.py  stream_test.py  structure.py
age/algorithms/: __init__.py  base.py  scrypt.py  scrypt_test.py  ssh_ed25519.py  ssh_ed25519_test.py  ssh_rsa.py  ssh_rsa_test.py  x25519.py  x25519_test.py
age/keys/: __init__.py  agekey.py  base.py  ed25519.py  ed25519_test.py  password.py  rsa.py  rsa_test.py
age/primitives/: __init__.py  eccsnacks_x25519.py  encode.py  encode_test.py  encrypt.py  hashes.py  hkdf.py  hkdf_test.py  hmac.py  hmac_test.py  random.py  rsa_oaep.py  rsa_oaep_test.py  scrypt.py  scrypt_test.py  x25519.py  x25519_test.py
age/recipients/: __init__.py  base.py  base_test.py  scrypt.py  ssh_ed25519.py  ssh_rsa.py  x25519.py
age/utils/: libsodium.py  libsodium_test.py
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/api/: age.algorithms.rst  age.keys.rst  age.primitives.rst  age.recipients.rst  age.rst  age.utils.rst  modules.rst
docs/: Makefile
docs/source/: background.rst  cli.rst  conf.py  development.rst  guides.rst  index.rst  reference.rst  tutorials.rst  usage.rst
docs/source/api/: age.algorithms.rst  age.keys.rst  age.primitives.rst  age.recipients.rst  age.rst  age.utils.rst  modules.rst
htmlcov/: index.html  src_age___init___py.html  src_age_algorithms___init___py.html  src_age_algorithms_scrypt_py.html  src_age_algorithms_scrypt_test_py.html  src_age_algorithms_ssh_ed25519_py.html  src_age_algorithms_ssh_ed25519_test_py.html  src_age_algorithms_ssh_rsa_py.html  src_age_algorithms_ssh_rsa_test_py.html  src_age_algorithms_x25519_py.html  src_age_algorithms_x25519_test_py.html  src_age_cli_py.html  src_age_exceptions_py.html  src_age_file_py.html  src_age_file_test_py.html  src_age_keyloader_py.html  src_age_keyloader_test_py.html  src_age_keys___init___py.html  src_age_keys_agekey_py.html  src_age_keys_base_py.html  src_age_keys_ed25519_py.html  src_age_keys_ed25519_test_py.html  src_age_keys_password_py.html  src_age_keys_rsa_py.html  src_age_keys_rsa_test_py.html  src_age_openssh_keys_py.html  src_age_openssh_keys_test_py.html  src_age_primitives___init___py.html  src_age_primitives_encode_py.html  src_age_primitives_encode_test_py.html  src_age_primitives_encrypt_py.html  src_age_primitives_hashes_py.html  src_age_primitives_hkdf_py.html  src_age_primitives_hkdf_test_py.html  src_age_primitives_hmac_py.html  src_age_primitives_hmac_test_py.html  src_age_primitives_random_py.html  src_age_primitives_rsa_oaep_py.html  src_age_primitives_rsa_oaep_test_py.html  src_age_primitives_scrypt_py.html  (+16 more)
pyage/primitives/: __init__.py  encode.py  encode_test.py  encrypt.py  hkdf.py  hmac.py  random.py  rsa_oaep.py  scrypt.py  x25519.py  x25519_test.py
src/age/: _version.py  cli.py  cli_test.py  exceptions.py  file.py  file_test.py  format.py  format_test.py  keyloader.py  keyloader_test.py  openssh_keys.py  openssh_keys_test.py  stream.py  stream_test.py
src/age/algorithms/: __init__.py  scrypt.py  scrypt_test.py  ssh_ed25519.py  ssh_ed25519_test.py  ssh_rsa.py  ssh_rsa_test.py  x25519.py  x25519_test.py
src/age/keys/: __init__.py  agekey.py  agekey_test.py  ed25519.py  ed25519_test.py  password.py  rsa.py  rsa_test.py
src/age/primitives/: __init__.py  bech32.py  bech32_test.py  encode.py  encode_test.py  encrypt.py  hashes.py  hkdf.py  hkdf_test.py  hmac.py  hmac_test.py  random.py  rsa_oaep.py  rsa_oaep_test.py  scrypt.py  scrypt_test.py  x25519.py  x25519_test.py
src/age/recipients/: __init__.py  base.py  base_test.py  helpers.py  helpers_test.py  scrypt.py  ssh_ed25519.py  ssh_rsa.py  x25519.py
src/age/utils/: asciiarmor.py  asciiarmor_test.py  copy_doc.py  env.py  env_test.py  libsodium.py  libsodium_test.py
testdata/: key.txt  test_rsa  test_rsa.pub
tests/: test_api.py
