[metadata]
name = age
version = attr: age.__version__
description = Actually good encryption. In Python.
long_description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
author = Jonas Lieb
url = https://github.com/jojonas/pyage
license = MIT
license-file = LICENSE
platforms = any
keywords = age encryption privacy experimental
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security :: Cryptography
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
packages = find:
install_requires =
    setuptools>=38.3
    pynacl>=1.4
    cryptography>=2.7
    bcrypt>=3.1
    click>=7.1
    requests>=2.24
python_requires = ~= 3.8, <4

[options.extras_require]
dev =
    black
    flake8
    mypy
    isort
test =
    pytest
    pyfakefs
    coverage
    pytest-cov
docs =
    sphinx
    doc8
    sphinx-autodoc-typehints
    sphinxcontrib-programoutput

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyage = age.cli:main

[flake8]
ignore = E501, W503, E203
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9

[mypy]
ignore_missing_imports = True
warn_unreachable = True
strict_equality = True

[isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True

[tool:pytest]
addopts = --cov=age --doctest-modules

[coverage:run]
branch = True
omit =
    *_test.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError

[build_sphinx]
source-dir = doc/source
build_dir = doc/build
